# teacher_tools

./: .flake8  .gitignore  LICENSE  Procfile  README.md  manage.py  mypy.ini  pyproject.toml
.github/workflows/: build.yml  pysa.yml
core/: forms.py  urls.py  views.py
core/templates/core/: base.html  homepage.html  register.html
core/templates/registration/: login.html  logout.html
seat_arranger/: admin.py  apps.py  forms.py  models.py  seating.py  urls.py  views.py
seat_arranger/migrations/: 0001_initial.py  0002_remove_student_class_period_classperiod_students.py  0002_tablelayout.py
seat_arranger/templates/seat_arranger/: add_class_period.html  add_table_layout.html  classroom.html
teacher_tools/: asgi.py  settings.py  urls.py  wsgi.py
