[tool.poetry]
name = "teacher-tools"
version = "0.1.0"
description = "Website of tools useful for teachers."
authors = ["Anthony Panettiere <apanettiere@fastmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2.4"
whitenoise = "^6.9.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
dj-database-url = "^3.0.1"
sentry-sdk = {extras = ["django"], version = "^2.32.0"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.17.1"
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
django-stubs = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
